--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ in Avanthi institute of Engineering and Technology.</p>
 </tr>
 </table>
   <hr size="3">
-  <h2>Education and Hobbies</h2>
+  <h2>Education</h2>
   <table cellspacing="10">
     <thead>
       <tr>
