--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </table>
 <hr size="5">
   <table>
-<form action="index.html" method="post" enctype="text/plain">
+<form action="managalagiri.sunny@gmail.com" method="post" enctype="text/plain">
 <tr><td><label><strong>Your Name:</strong></label></td>
   <td><input type="text" name="Yourname"></td>
 </tr>
